<resources>

    <string name="app_name">Muhammadiyah This Week</string>
    <string name="reg_pg_title_lbl">Based on Location</string>
    <string name="cat_pg_title_lbl">Based on Category</string>
    <string name="saved_pg_title_lbl">My Event List</string>
    <string name="archive_pg_title_lbl">Event Archives</string>
    <string name="feat_pg_title_lbl">All Org Event</string>
    <string name="menu_settings">Settings</string>
    <string name="search_event_hint">Search event</string>
    <string name="search_reg_hint">Search regional</string>
    <string name="search_tweet_hint">Search tweet</string>
    <string name="title_activity_main">Muhammadiyah This Week</string>
    <string name="title_activity_featured">Featured</string>
    <string name="title_activity_ticket">Ticket</string>
    <string name="title_activity_myticket">My Ticket</string>
    <string name="please_wait">Please Wait</string>
    <string name="location_lbl">Location :</string>
    <string name="date_lbl">Date :</string>
    <string name="description_lbl">Description :</string>
    <string name="category_lbl">Category :</string>
    <string name="ticket_lbl">Ticket Price :</string>
    <string name="contact_lbl">Contact :</string>
    <string name="author_lbl">Organizer :</string>
    <string name="detail_event_add_menu_title">Add to My Event</string>
    <string name="detail_event_rmv_menu_title">Remove from My Event</string>
    <string name="search_event_title">Search Event</string>
    <string name="no_saved_event">No event saved</string>
    <string name="no_archived_event">No event in last 2 weeks</string>
    <string name="retry_connection">Retry</string>
    
    <!-- Twitter Activity String -->
    <string name="follower_lbl">Follower</string>
    <string name="follow_us">Follow @</string>

    <!-- header text -->
    <string name="this_week">THIS WEEK</string>
    <string name="org_name">MUHAMMADIYAH</string>
    <string name="on_twitter">ON TWITTER</string>

</resources>