<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/sampleLayoutExample"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <!-- Loading layout -->

    <RelativeLayout
        android:id="@+id/loadingRelLayout"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical" >

        <ProgressBar
            android:id="@+id/progress_bar"
            style="?android:attr/progressBarStyleLarge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:paddingBottom="10dp"
            android:paddingTop="10dp" />

        <TextView
            android:id="@+id/waitting_textview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/progress_bar"
            android:layout_centerHorizontal="true"
            android:text="@string/please_wait" />
    </RelativeLayout>

    <!-- content layout -->

    <RelativeLayout
        android:id="@+id/listRelLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical" >

        <!-- Your Content view here -->

        <RelativeLayout
            android:id="@+id/twitter_detail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/blue_twitter"
            android:padding="7dp" >

            <TextView
                android:id="@+id/follower_lbl"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:text="@string/follower_lbl"
                android:textColor="@android:color/white"
                android:layout_marginRight="5dp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/follower_total"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toRightOf="@id/follower_lbl"
                android:textColor="@android:color/white"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/follow_us"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:text="@string/follow_us"
                android:textColor="@android:color/white" />
        </RelativeLayout>

        <com.handmark.pulltorefresh.library.PullToRefreshListView
            android:id="@+id/listview"
            android:layout_width="fill_parent"
            android:layout_height="match_parent"
            android:layout_below="@id/twitter_detail"
            android:footerDividersEnabled="true" />
    </RelativeLayout>

    <!-- Notification layout -->

    <RelativeLayout
        android:id="@+id/noDataRelLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/no_data_textview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:textSize="20dp" />

        <Button
            android:id="@+id/retry_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/no_data_textview"
            android:layout_centerInParent="true"
            android:padding="5dp"
            android:text="@string/retry_connection" />
    </RelativeLayout>

</RelativeLayout>