<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical" >

        <RelativeLayout
            android:id="@+id/loadingRelLayout"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:orientation="vertical" >

            <!-- Your Content view here -->

            <ProgressBar
                android:id="@+id/progress_bar"
                style="?android:attr/progressBarStyleLarge"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:paddingBottom="10dp"
                android:paddingTop="10dp" />

            <TextView
                android:id="@+id/waitting_textview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/progress_bar"
                android:layout_centerHorizontal="true"
                android:text="@string/please_wait" />
        </RelativeLayout>
        <!-- Name Label -->

        <RelativeLayout
            android:id="@+id/content_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <!-- Text base button -->

            <RelativeLayout
                android:id="@+id/text_base_btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_marginLeft="10dip"
                android:layout_marginRight="10dip"
                android:layout_marginTop="5dip"
                android:layout_marginBottom="5dip"
                android:background="@drawable/button_bg" >

                <ImageView
                    android:id="@+id/tb_btn_icon"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true" />

                <TextView
                    android:id="@+id/tb_btn_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:gravity="center_horizontal"
                    android:textColor="@android:color/white"
                    android:textSize="20sp"
                    android:textStyle="bold" />
            </RelativeLayout>

            <ScrollView
                android:id="@+id/featured_scrollview"
                android:layout_above="@id/text_base_btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fadingEdge="none" >

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical" >

                    <!-- Event Name -->

                    <TextView
                        android:id="@+id/event_name"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:layout_margin="10dip"
                        android:gravity="center_horizontal"
                        android:paddingBottom="5dip"
                        android:paddingTop="5dip"
                        android:textColor="@android:color/black"
                        android:textSize="25sp"
                        android:textStyle="bold" />

                    <ImageView
                        android:id="@+id/event_image"
                        android:layout_width="fill_parent"
                        android:layout_height="200dip"
                        android:layout_margin="10dip"
                        android:scaleType="centerCrop" />

                    <!-- Event Location -->

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="10dip" >

                        <TextView
                            android:id="@+id/loc_label"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/location_lbl"
                            android:textSize="16sp"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/event_location"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_toRightOf="@id/loc_label"
                            android:textSize="16sp" />
                    </RelativeLayout>

                    <!-- Event Date -->

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="10dip" >

                        <TextView
                            android:id="@+id/date_label"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/date_lbl"
                            android:textColor="@drawable/date_label_text_clr"
                            android:textSize="16sp"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/event_date"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_toRightOf="@id/date_label"
                            android:textSize="16sp" />
                    </RelativeLayout>
                    
                    <!-- Event author -->

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="10dip" >

                        <TextView
                            android:id="@+id/author_label"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/author_lbl"
                            android:textSize="16sp"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/event_author"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_toRightOf="@id/author_label"
                            android:textSize="16sp" />
                    </RelativeLayout>

                    <!-- Event Description -->

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="10dip"
                        android:orientation="vertical" >

                        <TextView
                            android:id="@+id/desc_label"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/description_lbl"
                            android:textSize="16sp"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/event_description"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:textSize="16sp"
                            android:gravity="fill_horizontal" />
                    </LinearLayout>
                    
                    <!-- Event Contact -->

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="10dip" >

                        <TextView
                            android:id="@+id/contact_label"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/contact_lbl"
                            android:textSize="16sp"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/event_contact"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_toRightOf="@id/contact_label"
                            android:textSize="16sp" />
                    </RelativeLayout>
                    
                    <!-- Event Category -->

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="10dip" >

                        <TextView
                            android:id="@+id/category_label"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/category_lbl"
                            android:textSize="16sp"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/event_category"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_toRightOf="@id/category_label"
                            android:textSize="16sp" />
                    </RelativeLayout>
                    
                    <!-- Event Ticket Price -->

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="10dip" >

                        <TextView
                            android:id="@+id/ticket_label"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/ticket_lbl"
                            android:textSize="16sp"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/event_ticket"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_toRightOf="@id/ticket_label"
                            android:textSize="16sp" />
                    </RelativeLayout>
                </LinearLayout>
            </ScrollView>
        </RelativeLayout>
    </LinearLayout>

</RelativeLayout>